Regression: Infinite drag of number buttons is broken #103253

Closed
opened 2022-12-15 23:28:20 +01:00 by Daniel Salazar · 12 comments
Member

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-15 01:17, hash: 0240b89599
Worked: 3.4
Caused by 230744d6fd

Short description of error
Drag-editing of a number button stops when hitting the window border

Exact steps for others to reproduce the error
On the default startup drag the location of the cube to the right until stopped.
It should continue forever

image.png

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-15 01:17, hash: `0240b89599` Worked: 3.4 Caused by 230744d6fd **Short description of error** Drag-editing of a number button stops when hitting the window border **Exact steps for others to reproduce the error** On the default startup drag the location of the cube to the right until stopped. It should continue forever ![image.png](https://archive.blender.org/developer/F14060638/image.png)
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Recent commits that could have caused this:

Recent commits that could have caused this: - 230744d6fd - a3a9459050
Pratik Borhade changed title from Infinite drag of number buttons is broken to Regression: Infinite drag of number buttons is broken 2022-12-16 04:18:14 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 230744d6fd

Caused by 230744d6fd

@PratikPB2123 230744d6fd should have restored the behavior of 3.3x and earlier, could you check if reverting a3a9459050 resolves the issue?

@PratikPB2123 230744d6fd should have restored the behavior of 3.3x and earlier, could you check if reverting a3a9459050a9 resolves the issue?
Member

Yes, reverting a3a9459050 solves the issue

Yes, reverting a3a9459050 solves the issue

@zanqdo could you confirm that 3.5x behavior matches Blender 3.3x?

@zanqdo could you confirm that 3.5x behavior matches Blender 3.3x?

This issue was referenced by 79a34758f5

This issue was referenced by 79a34758f52ad2dce1d0545ee23ff85b6d15e119

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-12-16 08:40:49 +01:00
Author
Member

In #103253#1461538, @ideasman42 wrote:
@zanqdo could you confirm that 3.5x behavior matches Blender 3.3x?

I can confirm the fix. Thank you!

> In #103253#1461538, @ideasman42 wrote: > @zanqdo could you confirm that 3.5x behavior matches Blender 3.3x? I can confirm the fix. Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103253
No description provided.